fix: container width on smaller screens

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -18,7 +18,8 @@
 }
 
 .container {
-  @apply w-[70%] mx-auto;
+  @apply sm:w-[70%] w-[90%] mx-auto;
+
 }
 
 .bg_backdrop {
